--- a/index.html
+++ b/index.html
@@ -46,13 +46,79 @@
                 <a class="btn btn-lightgrey px-4" href="#!">Get it on Firefox</a>
               </div>
             </div>
-            <div class="col d-flex flex-column justify-content-end position-relative pe-5">
-              <div class="background-shape"></div>
+            <div class="col d-flex flex-column justify-content-end p-lg-5 position-relative">
+              <div class="background-shape background-shape-right"></div>
               <img src="/images/illustration-hero.svg" alt="Bookmark Manager Illustration" class="img-fluid" />
             </div>
           </div>
         </div>
       </header>
+      <!-- Features section-->
+      <section class="container-fluid px-0 py-3 py-lg-5">
+        <div class="container-fluid m-0 py-lg-5">
+          <div class="row d-flex flex-column align-items-center text-center mb-5">
+            <div class="col-lg-5 px-4">
+              <h2>Features</h2>
+              <p class="mb-0">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+            </div>
+            <div class="col py-5">
+              <ul class="features nav d-flex flex-column flex-lg-row justify-content-lg-center mb-5 mb-lg-0 px-4" id="bookmarkTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" id="tab1-tab" data-bs-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true"> Simple Bookmarking </a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="tab2-tab" data-bs-toggle="tab" href="#tab2" role="tab" aria-controls="tab2" aria-selected="false"> Speedy Searching </a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="tab3-tab" data-bs-toggle="tab" href="#tab3" role="tab" aria-controls="tab3" aria-selected="false"> Easy Sharing </a>
+                </li>
+              </ul>
+              <!-- Tabs -->
+              <div class="tab-content row d-flex justify-content-center pt-3" id="bookmarkTabContent">
+                <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+                  <div class="row d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 gap-lg-0">
+                    <div class="col d-flex flex-column justify-content-end p-lg-5 position-relative">
+                      <div class="background-shape background-shape-left"></div>
+                      <img src="images/illustration-features-tab-1.svg" class="img-fluid" alt="Illustration Hero" />
+                    </div>
+                    <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
+                      <h1>Bookmark in one click</h1>
+                      <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                      <a href="" class="btn btn-primary">More info</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+                  <div class="row d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 gap-lg-0">
+                    <div class="col d-flex flex-column justify-content-end p-lg-5 position-relative">
+                      <div class="background-shape background-shape-left"></div>
+                      <img src="images/illustration-features-tab-2.svg" class="img-fluid" alt="Illustration Hero" />
+                    </div>
+                    <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
+                      <h1>Intelligent search</h1>
+                      <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                      <a href="" class="btn btn-primary">More info</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                  <div class="row d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 gap-lg-0">
+                    <div class="col d-flex flex-column justify-content-end p-lg-5 position-relative">
+                      <div class="background-shape background-shape-left"></div>
+                      <img src="images/illustration-features-tab-3.svg" class="img-fluid" alt="Illustration Hero" />
+                    </div>
+                    <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
+                      <h1>Share your bookmarks</h1>
+                      <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                      <a href="" class="btn btn-primary">More info</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
