--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <h2>Features</h2>
               <p class="mb-0">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
             </div>
-            <div class="col py-5">
+            <div class="col pt-5">
               <ul class="features nav d-flex flex-column flex-lg-row justify-content-lg-center mb-5 mb-lg-0 px-4" id="bookmarkTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <a class="nav-link active" id="tab1-tab" data-bs-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true"> Simple Bookmarking </a>
@@ -82,7 +82,7 @@
                       <img src="images/illustration-features-tab-1.svg" class="img-fluid" alt="Illustration Hero" />
                     </div>
                     <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
-                      <h1>Bookmark in one click</h1>
+                      <h2>Bookmark in one click</h2>
                       <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
                       <a href="" class="btn btn-primary">More info</a>
                     </div>
@@ -95,7 +95,7 @@
                       <img src="images/illustration-features-tab-2.svg" class="img-fluid" alt="Illustration Hero" />
                     </div>
                     <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
-                      <h1>Intelligent search</h1>
+                      <h2>Intelligent search</h2>
                       <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
                       <a href="" class="btn btn-primary">More info</a>
                     </div>
@@ -108,10 +108,63 @@
                       <img src="images/illustration-features-tab-3.svg" class="img-fluid" alt="Illustration Hero" />
                     </div>
                     <div class="col pt-5 p-lg-5 px-4 text-center text-lg-start d-flex flex-column align-items-lg-start gap-3">
-                      <h1>Share your bookmarks</h1>
+                      <h2>Share your bookmarks</h2>
                       <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
                       <a href="" class="btn btn-primary">More info</a>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Download section-->
+      <section>
+        <div class="container-fluid">
+          <div class="row d-flex flex-column align-items-center text-center">
+            <div class="col-lg-5">
+              <h2>Download the extension</h2>
+              <p class="mb-0">We've got more browsers in the pipeline. Please do let us know if you have a favourite you'd like us to prioritize.</p>
+            </div>
+          </div>
+
+          <div class="download-cards row d-flex justify-content-center pt-5">
+            <div class="col-lg-4 mb-5 mb-lg-0">
+              <div class="card pt-5 rounded-4 shadow d-flex flex-column align-items-center justify-content-center border-0">
+                <img src="images/logo-chrome.svg" class="img-fluid" alt="Add to Chrome" />
+                <div class="card-body px-0 pt-4 pb-3 text-center">
+                  <h5 class="card-title">Add to Chrome</h5>
+                  <p class="card-text text-muted">Minimum version 62</p>
+                  <img src="images/bg-dots.svg" alt="" />
+                  <div class="d-grip p-3">
+                    <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-5 mb-lg-0 mt-lg-5">
+              <div class="card pt-5 rounded-4 shadow d-flex flex-column align-items-center justify-content-center border-0">
+                <img src="images/logo-firefox.svg" class="img-fluid" alt="Add to Firefox" />
+                <div class="card-body px-0 pt-4 pb-3 text-center">
+                  <h5 class="card-title">Add to Firefox</h5>
+                  <p class="card-text text-muted">Minimum version 55</p>
+                  <img src="images/bg-dots.svg" alt="" />
+                  <div class="d-grip p-3">
+                    <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-5 mb-lg-0 mt-lg-5 pt-lg-5">
+              <div class="card pt-5 rounded-4 shadow d-flex flex-column align-items-center justify-content-center border-0">
+                <img src="images/logo-opera.svg" class="img-fluid" alt="Add to Opera" />
+                <div class="card-body px-0 pt-4 pb-3 text-center">
+                  <h5 class="card-title">Add to Opera</h5>
+                  <p class="card-text text-muted">Minimum version 46</p>
+                  <img src="images/bg-dots.svg" alt="" />
+                  <div class="d-grip p-3">
+                    <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
                   </div>
                 </div>
               </div>
