--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </section>
       <!--Download section-->
-      <section>
+      <section class="py-5">
         <div class="container-fluid">
           <div class="row d-flex flex-column align-items-center text-center">
             <div class="col-lg-5">
@@ -135,7 +135,7 @@
                 <img src="images/logo-chrome.svg" class="img-fluid" alt="Add to Chrome" />
                 <div class="card-body px-0 pt-4 pb-3 text-center">
                   <h5 class="card-title">Add to Chrome</h5>
-                  <p class="card-text text-muted">Minimum version 62</p>
+                  <p class="card-text">Minimum version 62</p>
                   <img src="images/bg-dots.svg" alt="" />
                   <div class="d-grip p-3">
                     <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
@@ -148,7 +148,7 @@
                 <img src="images/logo-firefox.svg" class="img-fluid" alt="Add to Firefox" />
                 <div class="card-body px-0 pt-4 pb-3 text-center">
                   <h5 class="card-title">Add to Firefox</h5>
-                  <p class="card-text text-muted">Minimum version 55</p>
+                  <p class="card-text">Minimum version 55</p>
                   <img src="images/bg-dots.svg" alt="" />
                   <div class="d-grip p-3">
                     <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
@@ -161,13 +161,69 @@
                 <img src="images/logo-opera.svg" class="img-fluid" alt="Add to Opera" />
                 <div class="card-body px-0 pt-4 pb-3 text-center">
                   <h5 class="card-title">Add to Opera</h5>
-                  <p class="card-text text-muted">Minimum version 46</p>
+                  <p class="card-text">Minimum version 46</p>
                   <img src="images/bg-dots.svg" alt="" />
                   <div class="d-grip p-3">
                     <button class="btn btn-primary w-100" type="button">Add & Install Extension</button>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FAQ section -->
+      <section class="py-5">
+        <div class="container-fluid px-3">
+          <div class="row d-flex flex-column align-items-center gap-5 pb-5">
+            <div class="col-lg-6 text-center">
+              <h2>Frequently Asked Questions</h2>
+              <p>Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+            </div>
+
+            <div class="col-lg-6">
+              <div class="accordion" id="accordionBookmark">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">What is Bookmark?</button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionBookmark">
+                    <div class="accordion-body">Bookmark is a tool that allows you to save your favorite websites and access them quickly.</div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How can I request a new browser?</button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionBookmark">
+                    <div class="accordion-body">You can request a new browser by emailing our support team or using the contact form on our website.</div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Is there a mobile app?</button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionBookmark">
+                    <div class="accordion-body">Yes, we have mobile apps for both iOS and Android. You can download them from the respective app stores.</div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What about other Chromium browsers?</button>
+                  </h2>
+                  <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionBookmark">
+                    <div class="accordion-body">Our service works across various Chromium-based browsers such as Google Chrome, Microsoft Edge, and Opera.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- More Info Button -->
+            <div class="col-lg-6 text-center">
+              <button type="button" class="btn btn-primary">More Info</button>
             </div>
           </div>
         </div>
