--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <h1>A Simple Bookmark Manager</h1>
                 <p>A clean and simple interface to organize your favourite websites. Open a new browser and see your sites load instantly. Try it for free.</p>
               </div>
-              <div class="d-flex gap-2 justify-content-center justify-content-lg-start">
-                <a class="btn btn-primary px-4 me-sm-3" href="#">Get it on Chrome</a>
-                <a class="btn btn-lightgrey px-4" href="#!">Get it on Firefox</a>
+              <div class="d-flex gap-3 justify-content-center justify-content-lg-start">
+                <a class="btn btn-primary btn-header" href="#">Get it on Chrome</a>
+                <a class="btn btn-lightgrey" href="#">Get it on Firefox</a>
               </div>
             </div>
             <div class="col d-flex flex-column justify-content-end p-lg-5 position-relative">
@@ -240,47 +240,43 @@
             <h2 class="text-white fw-bolder">Stay up to date with what we're doing</h2>
           </div>
           <div class="row d-flex justify-content-center pb-3">
-            <div class="col-lg-6">
-              <form class="needs-validation" novalidate>
-                <div class="d-flex flex-row align-items-start">
-                  <div class="flex-fill me-3 position-relative">
-                    <input type="email" class="form-control" id="emailInput" placeholder="Enter your email address" required />
-                    <div class="invalid-feedback">Whoops, make sure it's an email.</div>
-                  </div>
-                  <button type="submit" class="btn btn-secondary text-white text-nowrap">Contact Us</button>
-                </div>
-              </form>
-            </div>
+            <form class="col-lg-6 needs-validation d-flex flex-column flex-lg-row gap-2" novalidate>
+              <div class="flex-fill position-relative">
+                <input type="email" class="form-control" id="emailInput" placeholder="Enter your email address" required />
+                <div class="invalid-feedback position-absolute w-100">Whoops, make sure it's an email.</div>
+              </div>
+              <button type="submit" class="btn btn-secondary text-white text-nowrap email-submit">Contact Us</button>
+            </form>
           </div>
         </div>
       </section>
 
-      <!-- Footer-->
-      <footer class="p-5 d-flex justify-content-between">
-        <div class="container px-5 d-flex justify-content-between align-items-center">
-          <div class="d-flex justify-content-start align-items-center">
-            <a class="navbar-brand" href="#">
-              <img src="/images/logo-bookmark-white.svg" alt="Logo Bookmark" />
-            </a>
-            <ul class="navbar-nav nav-uppercase-spacing d-flex flex-row ms-5">
-              <li class="nav-item">
-                <a class="nav-link text-white mx-3" href="#!">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white mx-3" href="#!">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white mx-3" href="#!">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="social d-flex justify-content-between align-items-center">
-            <a href="https://www.facebook.com" target="_blank" class="social-link">
-              <img src="images/icon-facebook.svg" class="img-fluid h-50" alt="Find us on Facebook" />
-            </a>
-            <a href="https://www.twitter.com" target="_blank" class="social-link">
-              <img src="images/icon-twitter.svg" class="img-fluid h-50" alt="Find us on Twitter" />
-            </a>
+      <!-- Footer -->
+      <footer class="p-5 bg-dark">
+        <div class="container-fluid px-5">
+          <div class="row d-flex justify-content-between align-items-center">
+            <div class="col-12 col-lg-7 d-flex flex-column flex-lg-row justify-content-between align-items-center mb-3 mb-lg-0">
+              <a class="navbar-brand mb-3 mb-lg-0" href="#">
+                <img src="/images/logo-bookmark-white.svg" alt="Logo Bookmark" />
+              </a>
+
+              <ul class="navbar-nav nav-uppercase-spacing d-flex flex-column flex-lg-row flex-wrap justify-content-center align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link text-white mx-3" href="#!">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white mx-3" href="#!">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white mx-3" href="#!">Contact</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-12 col-lg-5 d-flex justify-content-center justify-content-lg-end gap-4">
+              <a href="https://www.facebook.com" target="_blank" class="social-link social-facebook mx-2"></a>
+              <a href="https://www.twitter.com" target="_blank" class="social-link social-twitter mx-2"></a>
+            </div>
           </div>
         </div>
       </footer>
