--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div class="collapse navbar-collapse mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav nav-uppercase-spacing ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#!">Features</a>
+                <a class="nav-link" href="#features">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#!">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="btn btn-secondary btn-login text-white nav-uppercase-spacing" href="#!">Login</a>
@@ -39,7 +39,6 @@
         </div>
       </nav>
 
-      <!-- Header-->
       <header class="container-fluid mx-0 py-5">
         <div class="row d-flex justify-content-center align-items-center flex-column-reverse flex-lg-row gap-5 gap-lg-0">
           <div class="col text-center text-lg-start d-flex flex-column gap-4 px-4 px-lg-5 ms-lg-5">
@@ -58,8 +57,7 @@
           </div>
         </div>
       </header>
-      <!-- Features section-->
-      <section class="container-fluid px-0 py-3">
+      <section class="container-fluid px-0 py-3" id="features">
         <div class="container-fluid m-0">
           <div class="row d-flex flex-column align-items-center text-center mb-5">
             <div class="col-lg-5 px-4">
@@ -79,7 +77,6 @@
                 </li>
               </ul>
 
-              <!-- Tabs -->
               <div class="tab-content row d-flex justify-content-center pt-3" id="bookmarkTabContent">
                 <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
                   <div class="row d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3 gap-lg-0">
@@ -126,7 +123,6 @@
         </div>
       </section>
 
-      <!--Download section-->
       <section class="container-fluid mx-0 pb-5">
         <div class="row d-flex flex-column align-items-center text-center">
           <div class="col-lg-5 p-4 p-lg-5">
@@ -186,7 +182,6 @@
         </div>
       </section>
 
-      <!-- FAQ section -->
       <section class="container-fluid mx-0 pb-5">
         <div class="row d-flex flex-column align-items-center gap-5">
           <div class="col-lg-6 text-center px-4 px-lg-5">
@@ -233,15 +228,13 @@
               </div>
             </div>
           </div>
-          <!-- More Info Button -->
           <div class="col-lg-6 text-center">
             <button type="button" class="btn btn-primary">More Info</button>
           </div>
         </div>
       </section>
 
-      <!-- Contact section-->
-      <section class="container-fluid mx-0 bg-primary p-5">
+      <section class="container-fluid mx-0 bg-primary p-5" id="contact">
         <div class="row d-flex justify-content-center pb-3">
           <div class="col-lg-5">
             <div class="text-center mb-5">
@@ -259,7 +252,6 @@
         </div>
       </section>
 
-      <!-- Footer -->
       <footer class="container-fluid bg-dark mx-0 p-5">
         <div class="row d-flex justify-content-between align-items-center px-5">
           <div class="col-12 col-lg-6 d-flex flex-column flex-lg-row justify-content-between align-items-center mb-3 mb-lg-0">
@@ -269,13 +261,13 @@
 
             <ul class="navbar-nav nav-uppercase-spacing d-flex flex-column flex-lg-row align-items-center gap-3">
               <li class="nav-item">
-                <a class="nav-link text-white" href="#!">Features</a>
+                <a class="nav-link text-white" href="#features">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#!">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#!">Contact</a>
+                <a class="nav-link text-white" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
